RESOLVED FIXED 106517
intrinsic min-width's don't override width for file upload controls
https://bugs.webkit.org/show_bug.cgi?id=106517
Summary intrinsic min-width's don't override width for file upload controls
Ojan Vafai
Reported 2013-01-09 18:50:53 PST
intrinsic min-width's don't override width for file upload controls
Attachments
Patch (12.70 KB, patch)
2013-01-09 18:54 PST, Ojan Vafai
tony: review+
Ojan Vafai
Comment 1 2013-01-09 18:54:52 PST
Tony Chang
Comment 2 2013-01-10 09:53:52 PST
Comment on attachment 182043 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=182043&action=review > Source/WebCore/ChangeLog:3 > + intrinsic min-width's don't override width for file upload controls Nit: min-width's -> min-widths > Source/WebCore/ChangeLog:10 > + The preferred width is the width used in it's container's computation Nit: it's -> its > Source/WebCore/ChangeLog:11 > + of it's intrinsic width. Nit: it's -> its > Source/WebCore/ChangeLog:14 > + the rendertree. Nit: rendertree -> render tree. > Source/WebCore/rendering/RenderFileUploadControl.cpp:175 > + RenderFileUploadControl* renderer = const_cast<RenderFileUploadControl*>(this); > + float minDefaultLabelWidth = defaultWidthNumChars * font.width(constructTextRun(renderer, font, characterAsString, style(), TextRun::AllowTrailingExpansion)); Maybe add a FIXME about this const_cast? I guess we want to make constructTextRun take a const renderer if possible? > LayoutTests/ChangeLog:3 > + intrinsic min-width's don't override width for file upload controls Nit: min-width's -> min-widths
Ojan Vafai
Comment 3 2013-01-10 10:00:41 PST
Comment on attachment 182043 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=182043&action=review >> Source/WebCore/rendering/RenderFileUploadControl.cpp:175 >> + float minDefaultLabelWidth = defaultWidthNumChars * font.width(constructTextRun(renderer, font, characterAsString, style(), TextRun::AllowTrailingExpansion)); > > Maybe add a FIXME about this const_cast? I guess we want to make constructTextRun take a const renderer if possible? Added a FIXME. I had taken a stab at this, but it was a deep rabbit hole that it wasn't clear to me how to make work.
Ojan Vafai
Comment 4 2013-01-10 10:09:57 PST
Note You need to log in before you can comment on or make changes to this bug.