intrinsic min-widths don't override width for file upload controls https://bugs.webkit.org/show_bug.cgi?id=106517

Reviewed by Tony Chang.

Source/WebCore:

Separate out computing intrinsic width from perferred width so that
we can use the intrinsic width correctly when applying min-width/max-width.
The preferred width is the width used in its container's computation
of its intrinsic width.

This is the first in a series of patches making this work across
the render tree.

Test: fast/forms/file/intrinsic-min-width-overrides-width.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::minIntrinsicLogicalWidth):
(WebCore):
(WebCore::RenderBox::maxIntrinsicLogicalWidth):
(WebCore::RenderBox::computeIntrinsicLogicalWidths):
(WebCore::RenderBox::computeLogicalWidthInRegionUsing):
* rendering/RenderBox.h:
(RenderBox):
* rendering/RenderFileUploadControl.cpp:
(WebCore::RenderFileUploadControl::computeIntrinsicLogicalWidths):
(WebCore):
(WebCore::RenderFileUploadControl::computePreferredLogicalWidths):
* rendering/RenderFileUploadControl.h:
(RenderFileUploadControl):

LayoutTests:

* fast/forms/file/intrinsic-min-width-overrides-width-expected.html: Added.
* fast/forms/file/intrinsic-min-width-overrides-width.html: Added.

Canonical link: https://commits.webkit.org/124774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139329 268f45cc-cd09-0410-ab3c-d52691b4dbfc